# src/routes/register.ts
@@ -1,4 +1,4 @@
-import { Router } from "express";
+import { Router, Request, Response } from "express";
 import { TaskService } from "../services/TaskService";
 import { taskRoutes } from "./taskRoutes";
 import { API_VERSION } from "../constants";
@@ -12,6 +12,11 @@ export const registerRoutes = (app) => {
   taskRoutes(router, taskService);
 
   app.use(`/${API_VERSION}`, router);
+
+  // Main Route
+  app.use("/", (req: Request, res: Response) => {
+    res.json({ "apiVersion:": API_VERSION });
+  });
 };
 
 export default registerRoutes;
